--- a/MVCMuncheese/Views/Home/About.cshtml
+++ b/MVCMuncheese/Views/Home/About.cshtml
@@ -1,7 +1,17 @@
 ﻿@{
-    ViewBag.Title = "About";
+    ViewBag.Title = "SFMFT";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<div class="col-md-12" style="text-align: center">
+    <h2>@ViewBag.Title</h2>
+    <h3>Sistema para el control de ventas y inventario</h3>
 
-<p>Use this area to provide additional information.</p>
+    <p>Versión 1.0</p>
+    <p>Fecha de Versión: Abril 2023</p>
+    <p>Propietario: Muncheese Street Food</p>
+    <p>Desarrolladores</p>
+    <p>Oscar Andrey Arias Campos</p>
+    <br />
+    <br />
+    <br />
+    <p>Desarrollado en Visual Studio C# 2022 utilizando el motor de base de datos SQL Server 2019</p>
+</div>
