--- a/MVCMuncheese/Views/PerfilUsuario/listarPerfilUsuario_PA.cshtml
+++ b/MVCMuncheese/Views/PerfilUsuario/listarPerfilUsuario_PA.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "listarPerfilUsuario_PA";
 }
 
-<h2>Usuarios</h2>
+<h2>Perfiles por Usuarios</h2>
 
 <p>
     @Html.ActionLink("Nuevo", "agregarPerfilUsuario_PA")
