--- a/MVCMuncheese/Views/Perfiles/detallePerfiles_PA.cshtml
+++ b/MVCMuncheese/Views/Perfiles/detallePerfiles_PA.cshtml
@@ -30,5 +30,5 @@
 </div>
 <p>
     @Html.ActionLink("Editar", "modificarPerfiles_PA", new { pId = Model.Perfil_Id }) |
-    @Html.ActionLink("Atras", "lisatrPerfiles_PA")
+    @Html.ActionLink("Atras", "listarPerfiles_PA")
 </p>
