--- a/MVCMuncheese/Views/Home/Index.cshtml
+++ b/MVCMuncheese/Views/Home/Index.cshtml
@@ -27,19 +27,19 @@
 </div>
 
 
-<div class="container" style="width:70%; height:70%" >
+<!--<div class="container" style="width:70%; height:70%" >
     <div class="col-md-10">
 
-        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">-->
             <!-- Indicadores -->
-            <ol class="carousel-indicators">
+            <!--<ol class="carousel-indicators">
                 <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
                 <li data-target="#carousel-example-generic" data-slide-to="1"></li>
                 <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-            </ol>
+            </ol>-->
 
             <!-- slides -->
-            <div class="carousel-inner" role="listbox" style="text-align:center">
+            <!--<div class="carousel-inner" role="listbox" style="text-align:center">
                 <div class="item active">
                     <img src="~/Img/Menu1.jpg" alt="..." width="350" height="576">
                     <div class="carousel-caption">
@@ -77,10 +77,10 @@
                     </div>
                 </div>
                 ...
-            </div>
+            </div>-->
 
             <!-- Controles -->
-            <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+            <!--<a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
                 <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
                 <span class="sr-only">Previous</span>
             </a>
@@ -90,4 +90,4 @@
             </a>
         </div>
     </div>
-</div>
+</div>-->
