--- a/MVCMuncheese/Views/Shared/_Layout.cshtml
+++ b/MVCMuncheese/Views/Shared/_Layout.cshtml
@@ -75,26 +75,32 @@
                                 <li class="dropdown">
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Mantenimiento <span class="caret"></span></a>
                                     <ul class="dropdown-menu" role="menu">
-                                        @*<li>@Html.ActionLink("Ingredientes", "listarIngredientes_PA", "Ingredientes")</li>*@
                                         <li>@Html.ActionLink("Categorias", "listarTipo_Producto_ENT", "Tipo_Producto")</li>
                                         <li>@Html.ActionLink("Productos", "listarProductos_ENT", "Productos")</li>
-                                        @*<li>@Html.ActionLink("Ingredientes por Producto", "listarIngredienteXProducto_PA", "IngredienteXProducto")</li>*@
                                         <li>@Html.ActionLink("Estados", "listarEstado_PA", "Estado")</li>
                                         <li>@Html.ActionLink("Mesas", "listarMesas_PA", "Mesas")</li>
-                                        <li>@Html.ActionLink("DetalleOrden", "listarDetalleOrden_PA", "DetalleOrden")</li>
-                                        <li>@Html.ActionLink("Ordenes", "listarOrdenes_PA", "Ordenes")</li>
+                                        <li>@Html.ActionLink("Inventario", "listarInventario_PA", "Inventario")</li>
+                                        @*<li>@Html.ActionLink("DetalleOrden", "listarDetalleOrden_PA", "DetalleOrden")</li>*@
+                                        @*<li>@Html.ActionLink("Ordenes", "listarOrdenes_PA", "Ordenes")</li>*@
                                         <li>@Html.ActionLink("Clientes", "listarClientes_ENT", "Clientes")</li>
                                         <li>@Html.ActionLink("Proveedores", "listarProveedores_PA", "Proveedores")</li>
                                         <li>@Html.ActionLink("Perfiles", "listarPerfiles_PA", "Perfiles")</li>
                                         <li>@Html.ActionLink("Usuarios", "listarUsuarios_PA", "Usuarios")</li>
                                         <li>@Html.ActionLink("Perfil de Usuario", "listarPerfilUsuario_PA", "PerfilUsuario")</li>
-                                        <li>@Html.ActionLink("Inventario", "listarInventario_PA", "Inventario")</li>
+                                        @*<li>@Html.ActionLink("Facturas", "listarFacturas_PA", "Facturas")</li>*@
+                                    </ul>
+                                </li>
+                                <li class="dropdown">
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Reportes<span class="caret"></span></a>
+                                    <ul class="dropdown-menu" role="menu">
+                                        <li>@Html.ActionLink("Ordenes", "listarOrdenes_PA", "Ordenes")</li>
+                                        <li>@Html.ActionLink("DetalleOrden", "listarDetalleOrden_PA", "DetalleOrden")</li>
                                         <li>@Html.ActionLink("Facturas", "listarFacturas_PA", "Facturas")</li>
                                     </ul>
                                 </li>
                             }
                         }
-                      
+
                     }
                     else
                     {
